eks/deployments/istio-gateway/6-gateway.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: api
  namespace: production
spec:
  selector:
    istio: gateway-release
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - app.test.com
