eks/deployments/istio-gateway/4-destination-rule.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: app
  namespace: production
spec:
  host: app
  subsets:
    - name: v1
      labels:
        app: app
        version: v1
    - name: v2
      labels:
        app: app
        version: v2
